force-app/main/default/objects/Fundraising__c/fields/Fundraising_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Closing_Date__c</fullName>
    <label>Fundraising Closing Date</label>
    <type>Date</type>
</CustomField>