force-app/main/default/objects/Fundraising__c/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Capital</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>Not ready-6 months</fullName>
            </value>
            <value>
                <fullName>Portfolio Performance</fullName>
            </value>
            <value>
                <fullName>Uninterested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>